--- a/templates/manager_offer_parameters_edit.html
+++ b/templates/manager_offer_parameters_edit.html
@@ -40,11 +40,11 @@
   </div>
   <div class="panel panel-default">
     <div class="panel-body">
-        <form method="POST" class="post-form" name="form_offer">
+        <form method="POST" class="post-form" name="form_education_group">
             {% csrf_token %}
             <div class="row">
                 <div class="col-md-3 col-lg-offset-3">
-                  {{ form.offer }}{{ form.acronym }}
+                  {{ form.education_group }}{{ form.acronym }}
                 </div>
             </div>
             <h3>{% trans 'Period of visibility for dissertation subjects'%}</h3>
