OD-40 correction des templates

--- a/templates/manager_dissertations_edit.html
+++ b/templates/manager_dissertations_edit.html
@@ -70,7 +70,7 @@
                 <div class="panel-group">
                     <label for="txt_offer_year_start" style="margin-left:-6px;">
                         {% trans 'Programs' %}
-                        {% for error in form.offer_year_start.errors %}
+                        {% for error in form.education_group_year_start.errors %}
                             <br>{{ error|escape }}
                         {% endfor %}
                     </label>
