--- a/templates/dissertations_detail.html
+++ b/templates/dissertations_detail.html
@@ -136,7 +136,7 @@
                       <label>{% trans 'Start Program/Year' %}</label>
                   </div>
                   <div class="col-md-9">
-                      {{ dissertation.offer_year_start }}
+                      {{ dissertation.education_group_year_start }}
                   </div>
                 </div>
             </div>
