--- a/templates/manager_offer_parameters_edit.html
+++ b/templates/manager_offer_parameters_edit.html
@@ -36,136 +36,185 @@
 {% endblock %}
 {% block content %}
   <div class="page-header">
-    <h2>{% trans 'Settings' %} {{ offer_proposition.acronym }}</h2>
+    <h2>{% trans 'Settings for' %}
+        {% for offer_prop in list_offer_proposition %}
+            {{offer_prop.acronym }}
+            {% if not forloop.last %} - {% endif %}
+        {% endfor %}</h2>
   </div>
   <div class="panel panel-default">
     <div class="panel-body">
-        <form method="POST" class="post-form" name="form_education_group">
+        <form method="POST" class="post-form" action="{{ request.get_full_path }}" name="form_education_group">
             {% csrf_token %}
+
             <div class="row">
-                <div class="col-md-3 col-lg-offset-3">
-                  {{ form.education_group }}{{ form.acronym }}
+                <div class="col-md-4">
+                    {% trans 'Period of visibility for dissertation subjects'%}
                 </div>
-            </div>
-            <h3>{% trans 'Period of visibility for dissertation subjects'%}</h3>
-            <div class="row">
-                <div class="col-md-6 form-group">
-                    <label for="txt_start_visibility_proposition" {% if form.start_visibility_proposition.errors %}
-                           style="color:red;" {% endif %}>{% trans 'from'%}</label>
-                    <input type="text" class="form-control"
+                <div class="col-md-2">
+                    <div class="input-group">
+                        <div class="input-group-addon">
+                            <label for="txt_start_visibility_proposition"
+                                    {% if form.start_visibility_proposition.errors %} style="color:red;" {% endif %}>
+                                {% trans 'from'%}
+                            </label>
+                        </div>
+                        <input type="text" class="form-control datepicker"
                            value="{{ form.start_visibility_proposition.value|date:'d/m/Y' }}"
                            name="start_visibility_proposition" id="txt_start_visibility_proposition">
+                    </div>
                 </div>
-                <div class="col-md-6 form-group">
-                    <label for="txt_end_visibility_proposition" {% if form.end_visibility_proposition.errors %}
-                           style="color:red;" {% endif %}>{% trans 'to' %}</label>
-                    <input type="text" class="form-control"
-                           value="{{ form.end_visibility_proposition.value|date:'d/m/Y' }}"
+                <div class="col-md-2">
+                    <div class="input-group">
+                        <div class="input-group-addon">
+                            <label for="txt_end_visibility_proposition"
+                                    {% if form.end_visibility_proposition.errors %} style="color:red;"{% endif %}>
+                                {% trans 'to' %}
+                            </label>
+                        </div>
+                        <input type="text" class="form-control datepicker"
+                           value="{{ form.end_visibility_proposition.value|date:'d/m/Y'}}"
                            name="end_visibility_proposition" id="txt_end_visibility_proposition">
+                    </div>
+                </div>
+                <div class="col-md-4">
                 </div>
             </div>
-            <h3>{% trans 'Period of possibility to create dissertations projects'%}</h3>
             <div class="row">
-                <div class="col-md-6 form-group">
-                    <label for="txt_start_visibility_dissertation" {% if form.start_visibility_dissertation.errors %}
-                           style="color:red;" {% endif %}>{% trans 'from'%}</label>
-                    <input type="text" class="form-control"
+                <div class="col-md-4">
+                    {% trans 'Period of possibility to create dissertations projects'%}
+                </div>
+                <div class="col-md-2">
+                    <div class="input-group">
+                        <div class="input-group-addon">
+                            <label for="txt_start_visibility_dissertation"
+                                    {% if form.start_visibility_dissertation.errors %}style="color:red;" {% endif %}>
+                                {% trans 'from'%}
+                            </label>
+                        </div>
+                        <input type="text" class="form-control datepicker"
                            value="{{ form.start_visibility_dissertation.value|date:'d/m/Y' }}"
                            name="start_visibility_dissertation" id="txt_start_visibility_dissertation">
+                    </div>
                 </div>
-                <div class="col-md-6 form-group">
-                    <label for="txt_end_visibility_dissertation" {% if form.end_visibility_dissertation.errors %}
-                           style="color:red;" {% endif %}>{% trans 'to' %}</label>
-                    <input type="text" class="form-control"
+                <div class="col-md-2">
+                    <div class="input-group">
+                        <div class="input-group-addon">
+                            <label for="txt_end_visibility_dissertation"
+                                    {% if form.end_visibility_dissertation.errors %} style="color:red;" {% endif %}>
+                                {% trans 'to' %}
+                            </label>
+                        </div>
+                        <input type="text" class="form-control datepicker"
                            value="{{ form.end_visibility_dissertation.value|date:'d/m/Y' }}"
                            name="end_visibility_dissertation" id="txt_end_visibility_dissertation">
+                    </div>
+                </div>
+                <div class="col-md-4">
                 </div>
             </div>
-            <h3>{% trans 'Period of visibility for dissertation jurys'%}</h3>
             <div class="row">
-                <div class="col-md-6 form-group">
-                    <label for="txt_start_jury_visibility" {% if form.start_jury_visibility.errors %}
-                           style="color:red;" {% endif %}>{% trans 'from'%}</label>
-                    <input type="text" class="form-control"
+                <div class="col-md-4">
+                    {% trans 'Period of visibility for dissertation jurys'%}
+                </div>
+                <div class="col-md-2">
+                    <div class="input-group">
+                        <div class="input-group-addon">
+                            <label for="txt_start_jury_visibility"
+                                    {% if form.start_jury_visibility.errors %} style="color:red;" {% endif %}>
+                                {% trans 'from'%}
+                            </label>
+                        </div>
+                        <input type="text" class="form-control datepicker"
                            value="{{ form.start_jury_visibility.value|date:'d/m/Y' }}"
                            name="start_jury_visibility" id="txt_start_jury_visibility">
+                    </div>
                 </div>
-                <div class="col-md-6 form-group">
-                    <label for="txt_end_jury_visibility" {% if form.end_jury_visibility.errors %}
-                           style="color:red;" {% endif %}>{% trans 'to' %}</label>
-                    <input type="text" class="form-control"
+                <div class="col-md-2">
+                    <div class="input-group">
+                        <div class="input-group-addon">
+                            <label for="txt_end_jury_visibility"
+                                    {% if form.end_jury_visibility.errors %} style="color:red;" {% endif %}>
+                                {% trans 'to' %}
+                            </label>
+                        </div>
+                        <input type="text" class="form-control datepicker"
                            value="{{ form.end_jury_visibility.value|date:'d/m/Y' }}"
                            name="end_jury_visibility" id="txt_end_jury_visibility">
+                    </div>
+                </div>
+                <div class="col-md-4">
                 </div>
             </div>
-            <h3>{% trans 'Period of possibility to edit dissertations titles'%}</h3>
             <div class="row">
-                <div class="col-md-6 form-group">
-                    <label for="txt_start_edit_title" {% if form.start_edit_title.errors %}
-                           style="color:red;" {% endif %}>{% trans 'from'%}</label>
-                    <input type="text" class="form-control"
+                <div class="col-md-4">
+                    {% trans 'Period of possibility to edit dissertations titles'%}
+                </div>
+                <div class="col-md-2">
+                    <div class="input-group">
+                        <div class="input-group-addon">
+                            <label for="txt_start_edit_title"
+                                    {% if form.start_edit_title.errors %} style="color:red;" {% endif %}>
+                                {% trans 'from'%}
+                            </label>
+                        </div>
+                        <input type="text" class="form-control datepicker"
                            value="{{ form.start_edit_title.value|date:'d/m/Y' }}"
                            name="start_edit_title" id="txt_start_edit_title">
+                    </div>
                 </div>
-                <div class="col-md-6 form-group">
-                    <label for="txt_end_edit_title" {% if form.end_edit_title.errors %}
-                           style="color:red;" {% endif %}>{% trans 'to' %}</label>
-                    <input type="text" class="form-control"
+                <div class="col-md-2">
+                    <div class="input-group">
+                        <div class="input-group-addon">
+                            <label for="txt_end_edit_title"
+                                    {% if form.end_edit_title.errors %} style="color:red;" {% endif %}>
+                                {% trans 'to' %}
+                            </label>
+                        </div>
+                        <input type="text" class="form-control datepicker"
                            value="{{ form.end_edit_title.value|date:'d/m/Y' }}"
                            name="end_edit_title" id="txt_end_edit_title">
+                    </div>
+                </div>
+                <div class="col-md-4">
                 </div>
             </div>
             <h3>{% trans 'Other settings'%}</h3>
-            <div class="row">
-                <div class="col-md-1">
-                    <input class="form-control" id="txt_student_can_manage_readers"  name="student_can_manage_readers"
-                           style="margin:-6px;" type="checkbox" {% if form.student_can_manage_readers.value %} checked {% endif %}>
-                </div>
-                <div class="col-md-5">
-                    <label for="txt_student_can_manage_readers">{% trans 'Students can manage readers' %}</label>
-                </div>
+            <div class="checkbox">
+                <label>
+                    <input id="txt_student_can_manage_readers"  name="student_can_manage_readers"
+                           type="checkbox" {% if form.student_can_manage_readers.value %} checked {% endif %}>
+                    {% trans 'Students can manage readers' %}
+                </label>
             </div>
-            <br>
-            <div class="row">
-                <div class="col-md-1">
-                    <input class="form-control" id="txt_adviser_can_suggest_reader"  name="adviser_can_suggest_reader"
-                           style="margin:-6px;" type="checkbox" {% if form.adviser_can_suggest_reader.value %} checked {% endif %}>
-                </div>
-                <div class="col-md-5">
-                    <label for="txt_adviser_can_suggest_reader">{% trans 'Adviser can manage jury members' %}</label>
-                </div>
+            <div class="checkbox">
+                <label>
+                    <input id="txt_adviser_can_suggest_reader"  name="adviser_can_suggest_reader"
+                           type="checkbox" {% if form.adviser_can_suggest_reader.value %} checked {% endif %}>
+                    {% trans 'Adviser can manage jury members' %}
+                </label>
             </div>
-            <br>
-            <div class="row">
-                <div class="col-md-1">
-                    <input class="form-control" id="txt_evaluation_first_year"  name="evaluation_first_year"
-                           style="margin:-6px;" type="checkbox" {% if form.evaluation_first_year.value %} checked {% endif %}>
-                </div>
-                <div class="col-md-5">
-                    <label for="txt_evaluation_first_year">{% trans 'First year evaluation' %}</label>
-                </div>
+            <div class="checkbox">
+                <label>
+                    <input id="txt_evaluation_first_year"  name="evaluation_first_year"
+                           type="checkbox" {% if form.evaluation_first_year.value %} checked {% endif %}>
+                    {% trans 'First year evaluation' %}
+                </label>
             </div>
-            <br>
-            <div class="row">
-                <div class="col-md-1">
-                    <input class="form-control" id="txt_validation_commission_exists"  name="validation_commission_exists"
-                           style="margin:-6px;" type="checkbox" {% if form.validation_commission_exists.value %} checked {% endif %}>
-                </div>
-                <div class="col-md-5">
-                    <label for="txt_validation_commission_exists">{% trans 'Validation commission exists' %}</label>
-                </div>
+            <div class="checkbox">
+                <label>
+                    <input id="txt_validation_commission_exists"  name="validation_commission_exists"
+                           type="checkbox" {% if form.validation_commission_exists.value %} checked {% endif %}>
+                    {% trans 'Validation commission exists' %}
+                </label>
             </div>
-            <br>
-            <div class="row">
-                <div class="col-md-1">
-                    <input class="form-control" id="txt_global_email_to_commission"  name="global_email_to_commission"
-                           style="margin:-6px;" type="checkbox" {% if form.global_email_to_commission.value %} checked {% endif %}>
-                </div>
-                <div class="col-md-5">
-                    <label for="txt_global_email_to_commission">{% trans 'Send an email to reading commission when acceptation of evaluation commission' %}</label>
-                </div>
+            <div class="checkbox">
+                <label>
+                    <input id="txt_global_email_to_commission"  name="global_email_to_commission"
+                           type="checkbox" {% if form.global_email_to_commission.value %} checked {% endif %}>
+                    {% trans 'Send an email to reading commission when acceptation of evaluation commission' %}
+                </label>
             </div>
-            <br>
             <button type="submit" class="save btn btn-primary">{% trans 'Save' %}</button>
         </form>
     </div>
@@ -174,48 +223,7 @@
 {% block script %}
 <script src="{% static 'js/bootstrap-datepicker.min.js' %}"></script>
 <script>
-    $("#txt_start_visibility_dissertation").datepicker({
-        format: "dd/mm/yyyy",
-        autoclose: true,
-        orientation: "bottom auto"
-    });
-
-    $("#txt_end_visibility_dissertation").datepicker({
-        format: "dd/mm/yyyy",
-        autoclose: true,
-        orientation: "bottom auto"
-    });
-        $("#txt_start_visibility_proposition").datepicker({
-        format: "dd/mm/yyyy",
-        autoclose: true,
-        orientation: "bottom auto"
-    });
-
-    $("#txt_end_visibility_proposition").datepicker({
-        format: "dd/mm/yyyy",
-        autoclose: true,
-        orientation: "bottom auto"
-    });
-
-    $("#txt_start_jury_visibility").datepicker({
-        format: "dd/mm/yyyy",
-        autoclose: true,
-        orientation: "bottom auto"
-    });
-
-    $("#txt_end_jury_visibility").datepicker({
-        format: "dd/mm/yyyy",
-        autoclose: true,
-        orientation: "bottom auto"
-    });
-
-    $("#txt_start_edit_title").datepicker({
-        format: "dd/mm/yyyy",
-        autoclose: true,
-        orientation: "bottom auto"
-    });
-
-    $("#txt_end_edit_title").datepicker({
+    $(".datepicker").datepicker({
         format: "dd/mm/yyyy",
         autoclose: true,
         orientation: "bottom auto"
