Ajout des tests pour les nouvelles vues

--- a/templates/manager_offer_parameters.html
+++ b/templates/manager_offer_parameters.html
@@ -52,9 +52,9 @@
                       <input type="checkbox" name="pk" value={{ offer_proposition.pk }}>
                   </td>
                   <td scope="row">
-                      <a href="{% url 'manager_offer_parameters_edit' %}">
+                      <span>
                           {{ offer_proposition.acronym }}
-                      </a>
+                      </span>
                   </td>
                   <td>
                       <table>
