OD-41 correction de la pr

--- a/templates/manager_offer_parameters.html
+++ b/templates/manager_offer_parameters.html
@@ -221,9 +221,9 @@
       </table>
       <button type="submit"
                      id="multiple_selection" class="btn btn-primary pull-left"
-                     role="button" title="{% trans 'multiple modification'%}" disabled>
+                     role="button" title="{% trans 'Multiple modification'%}" disabled>
                      <span class="glyphicon glyphicon-wrench"
-                     aria-hidden="true"></span> {% trans 'modify selected programs'%}</button>
+                     aria-hidden="true"></span> {% trans 'Modify selected programs'%}</button>
       </form>
     </div>
 {% endblock %}
