--- a/templates/manager_informations_list.html
+++ b/templates/manager_informations_list.html
@@ -135,6 +135,7 @@
                     null,
                     { "orderable": false },
                     { "orderable": false },
+                    { "orderable": true },
                     { "orderable": false },
                     { "orderable": false },
                     { "orderable": false },
