--- a/templates/dissertations_list.html
+++ b/templates/dissertations_list.html
@@ -299,6 +299,132 @@
               </table>
           </div>
       {% endif %}
+          {% if adviser_list_dissertations_president %}
+          <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">{% trans 'Dissertations as president' %}</h3>
+            </div>
+              <table class="table table-hover">
+                <tr>
+                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Author'%}</th>
+                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Program'%}</th>
+                  <th>{% trans 'year beginning'%}</th>
+                </tr>
+                {% for adviser_list_dissertation in adviser_list_dissertations_president %}
+                  <tr>
+                    <td>
+                        <a href="{% url 'dissertations_detail' pk=adviser_list_dissertation.dissertation.pk %}">
+                            {{ adviser_list_dissertation.dissertation.title }}
+                        </a>
+                    </td>
+                    <td>{{ adviser_list_dissertation.dissertation.author }}</td>
+                    <td>
+                        {% if adviser_list_dissertation.dissertation.status == 'DIR_SUBMIT' %}
+                        <span class="label label-primary">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
+                        {% elif adviser_list_dissertation.dissertation.status == 'COM_SUBMIT' %}
+                        <span class="label label-primary">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
+                        {% elif adviser_list_dissertation.dissertation.status == 'EVA_SUBMIT' %}
+                        <span class="label label-primary">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
+                        {% elif adviser_list_dissertation.dissertation.status == 'DIR_OK' %}
+                        <span class="label label-success">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
+                        {% elif adviser_list_dissertation.dissertation.status == 'DIR_KO' %}
+                        <span class="label label-danger">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
+                        {% else %}
+                        <span class="label label-default">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
+                        {% endif %}
+                    </td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.acronym }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.academic_year }}</td>
+                  </tr>
+                {% endfor %}
+              </table>
+          </div>
+      {% endif %}
+      {% if adviser_list_dissertations_history %}
+          <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">{% trans 'Your dissertations history' %}</h3>
+            </div>
+              <table class="table table-hover" id="tb_history">
+                <thead>
+                  <th>{% trans 'Title'%}</th>
+                  <th>{% trans 'Author'%}</th>
+                  <th>{% trans 'Status'%}</th>
+                  <th>{% trans 'Program'%}</th>
+                  <th>{% trans 'year beginning'%}</th>
+                </thead>
+                {% for adviser_list_dissertation in adviser_list_dissertations_history %}
+                  <tr>
+                    <td>
+                        <a href="{% url 'dissertations_detail' pk=adviser_list_dissertation.dissertation.pk %}">
+                            {{ adviser_list_dissertation.dissertation.title }}
+                        </a>
+                    </td>
+                    <td>{{ adviser_list_dissertation.dissertation.author }}</td>
+                    <td>
+                        {% if adviser_list_dissertation.dissertation.status == 'DIR_SUBMIT' %}
+                        <span class="label label-primary">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
+                        {% elif adviser_list_dissertation.dissertation.status == 'COM_SUBMIT' %}
+                        <span class="label label-primary">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
+                        {% elif adviser_list_dissertation.dissertation.status == 'EVA_SUBMIT' %}
+                        <span class="label label-primary">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
+                        {% elif adviser_list_dissertation.dissertation.status == 'DIR_OK' %}
+                        <span class="label label-success">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
+                        {% elif adviser_list_dissertation.dissertation.status == 'DIR_KO' %}
+                        <span class="label label-danger">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
+                        {% else %}
+                        <span class="label label-default">{{ adviser_list_dissertation.dissertation.get_status_display }}</span>
+                        {% endif %}
+                    </td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.acronym }}</td>
+                    <td>{{ adviser_list_dissertation.dissertation.education_group_year_start.academic_year }}</td>
+                  </tr>
+                {% endfor %}
+              </table>
+          </div>
+      {% endif %}
     </div>
   </div>
+{% endblock %}
+{% block script %}
+<script type="text/javascript" src="{% static 'js/jquery.dataTables.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/dataTables.bootstrap.min.js' %}"></script>
+<script>
+    $(document).ready(function()
+    {
+        $('#tb_history').DataTable(
+            {
+                "paging" : true,
+                "ordering" : true,
+                "info"  : false,
+                "searching" : true,
+                "language":
+                {
+
+                "sProcessing":     "{% trans 'Processing...'%}",
+                "sSearch":         "{% trans 'Search:'%}",
+                "sLengthMenu":     "{% trans 'Show _MENU_ entries'%}",
+                "sInfo":           "{% trans 'Showing _START_ to _END_ of _TOTAL_ entries'%}",
+                "sInfoEmpty":      "{% trans 'Showing 0 to 0 of 0 entries'%}",
+                "sInfoFiltered":   "{% trans '(filtered from _MAX_ total entries)'%}",
+                "sInfoPostFix":    "{% trans 'datatable_infopostfix'%}",
+                "sLoadingRecords": "{% trans 'Loading...'%}",
+                "sZeroRecords":    "{% trans 'No matching records found'%}",
+                "sEmptyTable":     "{% trans 'No data available in table'%}",
+                "oPaginate": {
+                    "sFirst":      "{% trans 'First'%}",
+                    "sPrevious":   "{% trans 'Previous'%}",
+                    "sNext":       "{% trans 'Next'%}",
+                    "sLast":       "{% trans 'Last'%}"
+                            },
+            "oAria": {
+                "sSortAscending":  "{% trans ': activate to sort column ascending'%}",
+                "sSortDescending": "{% trans ': activate to sort column descending'%}",
+                    }
+                }
+            })
+    ;});
+</script>
 {% endblock %}
