--- a/templates/manager_proposition_dissertation_detail.html
+++ b/templates/manager_proposition_dissertation_detail.html
@@ -153,7 +153,7 @@
                     <label>{% trans 'Programs' %}</label>
                 </div>
                 <div class="col-md-8">
-                    {% for offer_proposition in offer_propositions %}
+                    {% for offer_proposition in proposition_dissertation.offer_propositions.all %}
                         <span class="label label-default">{{ offer_proposition }}</span>
                     {% endfor %}
                 </div>
@@ -178,7 +178,7 @@
                  <div class="well well-sm">
                        {% trans 'You can define a jury for the dissertation subject. This jury will automatically be defined for all dissertations created from this subject. There can be only one promotor, if you add one, this promotor will replace the existing one.' %}
                  </div>
-                 {% for proposition_role in proposition_roles %}
+                 {% for proposition_role in proposition_dissertation.propositionrole_set.all %}
                  <div class="row" style="margin: 10px;">
                    <div class="col-md-3" style="text-align: right">
                        <label>{{ proposition_role.get_status_display }}</label>
